# STARK

./: .gitignore  404.html  Command.py  README.md  Search.py  config.example.py  config.py  dependences.txt  helper.py  index.html  install.bat  libs.txt  llms-full.txt  llms.txt  main.py  majordom-va.service  manage.py  mkdocs.yml  modules.py  pi_temp.py  pyproject.toml  requirments.txt  reset.py  setup.py  sitemap.xml  smarthome.service  start.py  startup[deprecated].py  synonyms.py  telegram_bot.py  test.py  text.html  voice_assistant.py
.github/workflows/: publish-docs.yml  release.yml  test.yml
ArchieCore/: __init__.py
ArchieCore/ACObjects/: ACNumber.py  ACObject.py  ACString.py  ACTime.py  ACTimeInterval.py  __init__.py
ArchieCore/Command/: Command.py  CommandsManager.py  Response.py  ThreadData.py
ArchieCore/Commands/: Command.py  CommandsContext.py  CommandsManager.py  Response.py  __init__.py
ArchieCore/Pattern/: Pattern.py  __init__.py  expressions.py
Command/: Callback.py  Command.py  __init__.py
Controls/: Control.py  __init__.py
Controls/API/: exceptions.py  main.py
Controls/Django/: Django.py
Controls/RemoteControl/: RemoteControl.py
Controls/TelegramBot/: MyTeleBot.py  TelegramBot.py
Controls/VoiceAssistant/: VoiceAssistant.py
DataBase/: DataBase.py  __init__.py
Features/: __init__.py
Features/Command/: Callback.py  Command.py  RThread.py  Response.py  __init__.py
Features/Media/: Media.py  MediaPlayer.py  YoutubePlayer.py  kinogo.py  playfilm.py
Features/QA/: QA.py
Features/Raspi/: Raspi.py  __init__.py  gitpull.py  tv.py
Features/SmallTalk/: SmallTalk.py  __init__.py  ctime.py  hello.py  test.py
Features/SmartHome/: SmartHome.py  __init__.py  alarmclock.py  light.py  main_light.py  window.py
Features/Zieit/: Zieit.py  myshedule.py
General/: Singleton.py  ThreadingFunction.py  __init__.py
General/DataBase/: DataBase.py
General/DispatchQueue/: DispatchQueue.py  DispatchQueueItem.py  __init__.py
General/Identifable/: Identifable.py  UUID.py
General/Merlin/: Merlin.py  MerlinMessage.py
General/Notifications/: NotificationCenter.py  NotificationName.py  NotificationObserver.py  __init__.py
General/SpeechRecognition/: SpeechRecognition.py  __init__.py
General/StringProcesser/: __init__.py
General/Text2Speech/: TTS.py
Media/: Media.py  __init__.py  film.py  kinogo.py
Merlin/: MerlinMessage.py
QA/: QA.py  __init__.py
RPi/: RPi.py  gitpull.py
Raspi/: RPi.py  Raspi.py  __init__.py  gitpull.py  tv.py
SmallTalk/: SmallTalk.py  __init__.py  ctime.py  hello.py  test.py
SmartHome/: AUID.py  DBTable.py  SmartHome.py  SmartHomeManager.py  __init__.py  alarmclock.py  config.py  database.py  lib_nrf24.py  light.py  main.py  main_light.py  managers.py  models.py  tables.py  window.py
SmartHome/API/: exceptions.py  main.py
SmartHome/Database/: DBTable.py  Device.py  DeviceModel.py  EntityManager.py  House.py  NamedIdentifable.py  Parameter.py  ParameterType.py  Room.py  User.py  __init__.py  tables.py
SmartHome/Merlin/: Merlin.py  MerlinMessage.py  __init__.py
SmartHome/Raspberry/: WiFi.py
SmartHome/client/: api.py  client.py  ws.py
SmartHome/exceptions/: Internal.py
SmartHome/hardware/: WiFi.py
SmartHome/managers/: DeviceModelManager.py  DevicesManager.py  HouseManager.py  HubManager.py  RoomsManager.py  WSManager.py  __init__.py
SmartHome/models/: Base.py  DeviceModel.py  House.py  Hub.py  Room.py  User.py  __init__.py
SmartHome/schemas/: device.py  house.py  hub.py  parameters.py  room.py  ws.py
SmartHome/server/: __init__.py  exceptions_handlers.py  http_exceptions.py
SmartHome/tests/: faker.py  jwt-key  jwt-key.pub  setup.py
SpeechRecognition/: SpeechRecognition.py  __init__.py
TelegramBot/: CallbackTeleBot.py  TelegramBot.py  main.py
Text2Speech/: TTS.py  __init__.py  archie-test-key.json
Text2Speech/google_api_core-1.21.0.dist-info/: METADATA  RECORD
Text2Speech/google_auth-1.18.0.dist-info/: RECORD
Text2Speech/google_cloud_texttospeech-2.0.0.dist-info/: METADATA  RECORD
Text2Speech/googleapis_common_protos-1.52.0.dist-info/: RECORD
VoiceAssistant/: VoiceAssistant.py  main.py
VoiceAssistant/Features/: __init__.py
VoiceAssistant/Middlewares/: NumeralsParser.py
Zieit/: Zieit.py  __init__.py  myshedule.py
advanced/custom-interfaces/: index.html  index.md
agent-platform/: index.html  index.md
archieapi/: asgi.py  urls.py
command-response/: index.html  index.md
commands-context/: index.html  index.md
contributing-and-shared-usage-stark-place/: index.html  index.md
core-concepts/: index.html  index.md
creating-commands/: index.html  index.md
default-speech-interfaces/: index.html  index.md
dependency-injection/: index.html  index.md
docs/: CNAME  agent-platform.md  command-response.md  commands-context.md  contributing-and-shared-usage-stark-place.md  core-concepts.md  creating-commands.md  default-speech-interfaces.md  dependency-injection.md  first-steps.md  home.md  how-to-run.md  index.md  installation.md  patterns.md  project-ideas.md  roadmap.md  running-your-assistant.md  sync-vs-async-commands.md  voice-assistant.md  where-to-host.md
first-steps/: index.html  index.md
how-to-run/: index.html  index.md
installation/: index.html  index.md
localization-and-multilingual/: index.html  index.md
majordom_va/: VoiceAssistant.py  __main__.py  config.py
overrides/: main.html
patterns/: index.html  index.md
project-ideas/: index.html  index.md
resources/: crontab  dependences.txt  dependencies.txt  requirments.txt  reset.py
roadmap/: index.html  index.md
running-your-assistant/: index.html  index.md
search/: search_index.json
stark/: __init__.py  __main__.py  config.py
sync-vs-async-commands/: index.html  index.md
tests/: conftest.py  test_commands_context.py  test_health_check.py  test_patterns.py  test_suggestions_manager.py  test_transcription.py  test_va_modes.py  test_voice_assistant.py
tools/: index.html  index.md
voice-assistant/: index.html  index.md
where-to-host/: index.html  index.md
(+406 files in other folders)
