[tool.poetry]
name = "stark"
version = "0.1.0"
description = ""
authors = ["MarkParker5 <markparker.it@gmail.com>"]
license = "CC BY-NC-ND 4.0"
readme = "README.md"
packages = [{include = "stark"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.4"
asyncer = "^0.0.2"

# Optional dependencies
numpy = { version = "^1.24.1", optional = true }
sounddevice = { version = "^0.4.5", optional = true }
soundfile = { version = "^0.11.0", optional = true }
vosk = { version = "0.3.44", optional = true }
google-cloud-texttospeech = { version = "^2.14.1", optional = true }
torch = { version = "^1.13.1", optional = true }

[tool.poetry.extras]
gcloud = ["google-cloud-texttospeech", "sounddevice", "soundfile"]
vosk = ["vosk", "sounddevice"]
silero = ["torch", "numpy", "sounddevice"]
sound = ["sounddevice", "soundfile"]

[tool.poetry.group.dev.dependencies]
# docs generation
mkdocs-material = { version = "^9.2.8", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "^1.2.0", optional = true }
mkdocs-swagger-ui-tag = { version = "^0.6.4", optional = true }
# tests and static validation
pytest = "^7.2.1"
mypy = "^1.1.1"
pytest-asyncio = "^0.21.1"
pytest-trio = "^0.8.0"
pytest-repeat = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["stark",]
# asyncio_mode = "auto"
trio_mode = "true"
filterwarnings = [
    "once"
]

[tool.mypy]
ignore_missing_imports = true
exclude = [
    "stark/core/types/Time.*",
    "stark/core/types/Number.*",
]
