[tool.poetry]
name = "stark-engine"
version = "4.1.0"
description = "S.T.A.R.K - Speech and Text Algorithmic Recognition Kit. Modern framework for creating powerfull voice assistants."
authors = ["MarkParker5 <mark@parker-programs.com>"]
license = "CC BY-NC-SA 4.0"
readme = "README.md"
packages = [{ include = "stark" }]
homepage = "https://pypi.org/project/stark-engine/"
repository = "https://github.com/MarkParker5/STARK"
documentation = "https://stark.markparker.me"
keywords = [
    "python",
    "open-source",
    "natural-language-processing",
    "framework",
    "cross-platform",
    "natural-language",
    "voice",
    "voice-commands",
    "python3",
    "voice-recognition",
    "speech-recognition",
    "speech-to-text",
    "community-project",
    "voice-assistant",
    "voice-interface",
    "NLP",
    "machine-learning",
    "AI",
    "text-analysis",
    "stark",
    "stark-place",
    "stark-engine",
    "mark parker",
]


[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"
asyncer = "^0.0.2"

# Optional dependencies
numpy = "^2.3.3"
sounddevice = { version = "^0.4.5", optional = true }
soundfile = { version = "^0.11.0", optional = true }
vosk = { version = "0.3.44", optional = true }
google-cloud-texttospeech = { version = "^2.14.1", optional = true }
torch = { version = "^1.13.1", optional = true }
mkdocs-material = { version = "9.6.20", optional = true, extras = ["imaging"] }
mkdocs-git-revision-date-localized-plugin = { version = "^1.2.0", optional = true }
epitran = "^1.26.0"

[tool.poetry.extras]
gcloud = ["google-cloud-texttospeech", "sounddevice", "soundfile"]
vosk = ["vosk", "sounddevice"]
silero = ["torch", "numpy", "sounddevice"]
sound = ["sounddevice", "soundfile"]
all = [
    "google-cloud-texttospeech",
    "vosk",
    "torch",
    "numpy",
    "sounddevice",
    "soundfile",
]
docs = ["mkdocs-material", "mkdocs-git-revision-date-localized-plugin"]

[tool.poetry.group.dev.dependencies]
# tests and static validation
pytest = "^7.2.1"
mypy = "^1.1.1"
pytest-asyncio = "^0.21.1"
pytest-trio = "^0.8.0"
pytest-repeat = "^0.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
# asyncio_mode = "auto"
trio_mode = "true"
filterwarnings = ["once"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true

[tool.mypy]
ignore_missing_imports = true
exclude = ["stark/core/types/Time.*", "stark/core/types/Number.*"]
